add catalog statistics function
