# amoro-ams/src/main/java/org/apache/amoro/server/persistence/mapper/OptimizerMapper.java
@@ -73,6 +73,26 @@ public interface OptimizerMapper {
 
   @Select(
       "SELECT token, resource_id, group_name, container_name, start_time, touch_time,"
+          + "thread_count, total_memory, properties FROM optimizer"
+          + " WHERE group_name = #{groupName}")
+  @Results({
+    @Result(property = "token", column = "token"),
+    @Result(property = "resourceId", column = "resource_id"),
+    @Result(property = "groupName", column = "group_name"),
+    @Result(property = "containerName", column = "container_name"),
+    @Result(property = "startTime", column = "start_time", typeHandler = Long2TsConverter.class),
+    @Result(property = "touchTime", column = "touch_time", typeHandler = Long2TsConverter.class),
+    @Result(property = "threadCount", column = "thread_count"),
+    @Result(property = "memoryMb", column = "total_memory"),
+    @Result(
+        property = "properties",
+        column = "properties",
+        typeHandler = Map2StringConverter.class),
+  })
+  List<OptimizerInstance> selectGroupName(@Param("groupName") String groupName);
+
+  @Select(
+      "SELECT token, resource_id, group_name, container_name, start_time, touch_time,"
           + "thread_count, total_memory, properties FROM optimizer WHERE resource_id = #{resourceId}")
   @Results({
     @Result(property = "token", column = "token"),
